--- a/views/square_root_new.erb
+++ b/views/square_root_new.erb
@@ -39,11 +39,12 @@
       </tr>
     </table>
 
-  <form action="/square/results">
-      <div><label for="a_num">Enter a number</label></div>
-      <div><input id="a_num" name="number" placeholder="What number do you want?"></div>
-  <div><button>Calculate square</button></div>
-  </form>
-
+    <form action="/square_root/results">
+      <div>
+        <label for="a_num">Enter a number</label>
+        <input id="a_num" name="number" placeholder="What number do you want to take the square root of?">
+      </div>
+      <button>Calculate square root</button>
+    </form>
   </body>
 </html>
