--- a/views/payment.erb
+++ b/views/payment.erb
@@ -39,11 +39,23 @@
       </tr>
     </table>
 
-  <form action="/square/results">
-      <div><label for="a_num">Enter a number</label></div>
-      <div><input id="a_num" name="number" placeholder="What number do you want?"></div>
-  <div><button>Calculate square</button></div>
-  </form>
+    <form action="/payment/results">
+      <div>
+        <label for="apr_input">APR</label>
+        <input id="apr_input" name="user_apr" placeholder="E.g. 5.42">
+      </div>
+      
+      <div>
+        <label for="years_input">Number of years</label>
+        <input id="years_input" name="user_years" placeholder="How many years to repay?">
+      </div>
 
+      <div>
+        <label for="principal_input">Principal</label>
+        <input id="principal_input" name="user_pv" placeholder="How much principal?">
+      </div>
+
+      <button>Calculate monthly payment</button>
+    </form>
   </body>
 </html>
