--- a/views/payment_results.erb
+++ b/views/payment_results.erb
@@ -39,11 +39,16 @@
       </tr>
     </table>
 
-  <form action="/square/results">
-      <div><label for="a_num">Enter a number</label></div>
-      <div><input id="a_num" name="number" placeholder="What number do you want?"></div>
-  <div><button>Calculate square</button></div>
-  </form>
+    <h1>Payment Results</h1>
+    <dl>
+      <dt> APR </dt>
+      <dd> <%= @apr %> </dd>
+      <dt> Number of years </dt>
+      <dd> <%= @years %> </dd>
+      <dt> Principal </dt>
+      <dd> <%= @pv %> </dd>
 
+    </dl>
+    <a href="/payment/new"> Calculate another payment </a>
   </body>
 </html>
