--- a/views/ramdom_results.erb
+++ b/views/ramdom_results.erb
@@ -39,11 +39,15 @@
       </tr>
     </table>
 
-  <form action="/square/results">
-      <div><label for="a_num">Enter a number</label></div>
-      <div><input id="a_num" name="number" placeholder="What number do you want?"></div>
-  <div><button>Calculate square</button></div>
-  </form>
-
+    <h1>Square Results</h1>
+    <dl>
+      <dt> Minimun </dt>
+      <dd> <%= @min %> </dd>
+      <dt> Maximum </dt>
+      <dd> <%= @max %> </dd>
+      <dt> Random Number </dt>
+      <dd> <%= @out %> </dd>
+    </dl>
+    <a href="/random/new"> Pick another random number </a>
   </body>
 </html>
