--- a/views/square_root_new.erb
+++ b/views/square_root_new.erb
@@ -42,7 +42,7 @@
     <form action="/square_root/results">
       <div>
         <label for="a_num">Enter a number</label>
-        <input id="a_num" name="number" placeholder="What number do you want to take the square root of?">
+        <input id="a_num" name="user_number" placeholder="What number do you want to take the square root of?">
       </div>
       <button>Calculate square root</button>
     </form>
